--- a/alpha.html
+++ b/alpha.html
@@ -11,7 +11,7 @@
 <div class="col">
    <div class="card">
    	       <h3>a</h3>
-   	       <img src="a.jfif">
+   	       <img src="baby/a.jfif">
    	      <a href="#" class="btn">AEROPLANE</a>
        </div>
 
