--- a/alpha.html
+++ b/alpha.html
@@ -167,8 +167,8 @@
 
        <div class="card">
        	  <h3>TEST</h3>
-       	  <img src="z.jfif">
-           <a href="test.html" class="btn">TEXT</a>
+       	  
+           <a href="test.html" class="btn">TEST</a>
        	</div>
    </div>
 
